--- a/frontend/src/components/AvatarPicker/AvatarPicker.module.scss
+++ b/frontend/src/components/AvatarPicker/AvatarPicker.module.scss
@@ -100,8 +100,7 @@
             margin-top: 5px;
 
             .caracteristicTitle {
-                font-size: 12px;
-                margin: 5px 0;
+                display: none;
             }
 
             .caracteristicPickerBox {
