--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
       align-items: center;
 
       .pentaboy {
+
             height: 70px;
             width: auto;
             object-fit: contain;
@@ -23,6 +24,7 @@
 }
 
 .inColumn {
+      margin-top: 20px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -65,6 +67,19 @@
                   font-size: 40px;
                   letter-spacing: 1px;
                   -webkit-text-stroke-width: 1px;
+            }
+      }
+}
+
+@media (max-width: 390px) {
+      .inColumn {
+            .pentaboy {
+                  height: 70px;
+                  margin-right: -20px;
+            }
+
+            .title {
+                  font-size: 30px;
             }
       }
 }
