--- a/frontend/src/components/Login/Login.module.scss
+++ b/frontend/src/components/Login/Login.module.scss
@@ -2,9 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding: 0;
-    flex-grow: 1;
 
     .container {
         margin: 20px auto;
@@ -55,6 +54,26 @@
                 padding: 0px 10px;
                 font-size: 20px;
                 height: 50px;
+                ;
+            }
+        }
+    }
+}
+
+@media (max-width: 390px) {
+    .mainContainer {
+        .container {
+            margin: 5px auto;
+
+            .title {
+                font-size: 20px;
+                margin-bottom: 10px;
+            }
+
+            .inputName {
+                padding: 0px 5px;
+                font-size: 15px;
+                height: 40px;
                 ;
             }
         }
