--- a/frontend/src/components/PlayButton/PlayButton.scss
+++ b/frontend/src/components/PlayButton/PlayButton.scss
@@ -160,7 +160,7 @@
 @media (max-width: 390px) {
     .playButton {
         svg {
-            width: 200px;
+            width: 150px;
         }
     }
 }
