--- a/frontend/src/components/TransparentContainer/TransparentContainer.module.scss
+++ b/frontend/src/components/TransparentContainer/TransparentContainer.module.scss
@@ -17,3 +17,10 @@
         padding: 20px;
     }
 }
+
+@media (max-width: 390px) {
+    .transparentContainer {
+        border-radius: 15px;
+        padding: 10px;
+    }
+}
